defconfig: Expand USB HID game controller support
Enable support for USB-connected xpad, ps3, and other generic USB
controllers.

Cherrypick from Id3bfcd8a2b98041af732c41b1a3ede490845fb4e

Bug: 131881752
Test: Verify to support X-box 360 and iFYOO joysticks
Change-Id: I57e2c349c83538cebe704cc1b282ff93e848e198
Signed-off-by: Albert Wang <albertccwang@google.com>
Signed-off-by: Steve Pfetsch <spfetsch@google.com>

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -2597,6 +2597,7 @@ CONFIG_PINCTRL_SM8150=y
 # CONFIG_PINCTRL_SDM660 is not set
 # CONFIG_PINCTRL_SDM429W is not set
 CONFIG_GPIOLIB=y
+CONFIG_GPIOLIB_FASTPATH_LIMIT=512
 CONFIG_OF_GPIO=y
 CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
@@ -3606,7 +3607,8 @@ CONFIG_HID_APPLE=y
 # CONFIG_HID_PRODIKEYS is not set
 # CONFIG_HID_CMEDIA is not set
 # CONFIG_HID_CYPRESS is not set
-# CONFIG_HID_DRAGONRISE is not set
+CONFIG_HID_DRAGONRISE=y
+CONFIG_DRAGONRISE_FF=y
 # CONFIG_HID_EMS_FF is not set
 CONFIG_HID_ELECOM=y
 # CONFIG_HID_ELO is not set
@@ -3637,7 +3639,8 @@ CONFIG_HID_NINTENDO=y
 # CONFIG_HID_NTI is not set
 # CONFIG_HID_NTRIG is not set
 # CONFIG_HID_ORTEK is not set
-# CONFIG_HID_PANTHERLORD is not set
+CONFIG_HID_PANTHERLORD=y
+CONFIG_PANTHERLORD_FF=y
 # CONFIG_HID_PENMOUNT is not set
 # CONFIG_HID_PETALYNX is not set
 # CONFIG_HID_PICOLCD is not set
@@ -3650,11 +3653,12 @@ CONFIG_HID_PLANTRONICS=y
 CONFIG_HID_SONY=y
 CONFIG_SONY_FF=y
 # CONFIG_HID_SPEEDLINK is not set
-# CONFIG_HID_STEAM is not set
+CONFIG_HID_STEAM=y
 # CONFIG_HID_STEELSERIES is not set
 # CONFIG_HID_SUNPLUS is not set
 # CONFIG_HID_RMI is not set
-# CONFIG_HID_GREENASIA is not set
+CONFIG_HID_GREENASIA=y
+CONFIG_GREENASIA_FF=y
 # CONFIG_HID_SMARTJOYPLUS is not set
 # CONFIG_HID_TIVO is not set
 # CONFIG_HID_TOPSEED is not set
@@ -3662,7 +3666,7 @@ CONFIG_SONY_FF=y
 # CONFIG_HID_THRUSTMASTER is not set
 # CONFIG_HID_UDRAW_PS3 is not set
 # CONFIG_HID_WACOM is not set
-# CONFIG_HID_WIIMOTE is not set
+CONFIG_HID_WIIMOTE=y
 # CONFIG_HID_XINMO is not set
 # CONFIG_HID_ZEROPLUS is not set
 # CONFIG_HID_ZYDACRON is not set
@@ -3674,8 +3678,8 @@ CONFIG_HID_QVR=y
 # USB HID support
 #
 CONFIG_USB_HID=y
-# CONFIG_HID_PID is not set
-# CONFIG_USB_HIDDEV is not set
+CONFIG_HID_PID=y
+CONFIG_USB_HIDDEV=y
 
 #
 # I2C HID support
@@ -5617,7 +5621,8 @@ CONFIG_DEFAULT_SECURITY="selinux"
 # Memory initialization
 #
 CONFIG_INIT_STACK_NONE=y
-# CONFIG_INIT_STACK_ALL is not set
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+# CONFIG_INIT_STACK_ALL_ZERO is not set
 # CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
 CONFIG_XOR_BLOCKS=y
