--- a/arch/arm64/boot/dts/qcom/sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150.dtsi
@@ -557,7 +557,7 @@
 	};
 
 	chosen {
-		bootargs = "noirqdebug rcupdate.rcu_expedited=1 rcu_nocbs=0-7 cgroup.memory=nokmem,nosocket kpti=off";
+		bootargs = "noirqdebug rcu_nocbs=0-7 cgroup.memory=nokmem,nosocket kpti=off";
 	};
 
 	soc: soc { };
