Revert "dsi-panel-samsung_oneplus_dsc: disable dsc compression"
This reverts commit 3b9657ccee029765c2399b55b4f8b358992ba456.

--- a/arch/arm64/boot/dts/qcom/dsi-panel-samsung_oneplus_dsc.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-samsung_oneplus_dsc.dtsi
@@ -192,6 +192,7 @@
 				qcom,mdss-dsi-t-clk-post = <0x1A>;
 				qcom,mdss-dsi-on-command = [
 				/* DSC Setting */
+				07 01 00 00 00 00 01 01					/* DSC enable */
 				15 01 00 00 00 00 02 C3 00				/* Scaler disable */
 				39 01 00 00 00 00 5A 0A					/* PPS Setting (1440 x 3120) (initial value) */
 				10 00 00 89 30 80 0C 30
@@ -723,6 +724,15 @@
 				qcom,mdss-dsi-panel-gamma-otp-read-b3-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-panel-level2-key-disable-command-state = "dsi_lp_mode";
 				qcom,panel-roi-alignment=<720 65 720 65 720 65>;
+				qcom,compression-mode = "dsc";
+				qcom,lm-split = <720 720>;
+				qcom,mdss-dsc-encoders = <2>;
+				qcom,mdss-dsc-slice-height = <65>;
+				qcom,mdss-dsc-slice-width = <720>;
+				qcom,mdss-dsc-slice-per-pkt = <2>;
+				qcom,mdss-dsc-bit-per-component = <8>;
+				qcom,mdss-dsc-bit-per-pixel = <8>;
+				qcom,mdss-dsc-block-prediction-enable;
 				};
 
 			timing@1{
@@ -805,6 +815,7 @@
 				qcom,mdss-dsi-on-command = [
 				/* DSC Setting */
 				29 01 00 00 00 00 03 F0 5A 5A
+				07 01 00 00 00 00 01 01					/* DSC enable */
 				15 01 00 00 00 00 02 C3 01				/* Scaler enable(x1.78) */
 				39 01 00 00 00 00 59 0A					/* PPS Setting (1080 x 2340) */
 				11 00 00 89 30 80 09 24
@@ -1338,6 +1349,15 @@
 				qcom,mdss-dsi-panel-gamma-otp-read-b3-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-panel-level2-key-disable-command-state = "dsi_lp_mode";
 				qcom,panel-roi-alignment=<540 60 540 60 540 60>;
+				qcom,compression-mode = "dsc";
+				qcom,lm-split = <540 540>;
+				qcom,mdss-dsc-encoders = <2>;
+				qcom,mdss-dsc-slice-height = <60>;
+				qcom,mdss-dsc-slice-width = <540>;
+				qcom,mdss-dsc-slice-per-pkt = <2>;
+				qcom,mdss-dsc-bit-per-component = <8>;
+				qcom,mdss-dsc-bit-per-pixel = <8>;
+				qcom,mdss-dsc-block-prediction-enable;
 				};
 
 			timing@2{
@@ -1423,6 +1443,7 @@
 				qcom,mdss-dsi-on-command = [
 				/* DSC Setting */
 				29 01 00 00 00 00 03 F0 5A 5A
+				07 01 00 00 00 00 01 01					/* DSC enable */
 				15 01 00 00 00 00 02 C3 01				/* Scaler enable(x1.78) */
 				39 01 00 00 00 00 59 0A					/* PPS Setting (1080 x 2340) */
 				11 00 00 89 30 80 09 24
@@ -1955,6 +1976,15 @@
 				qcom,mdss-dsi-panel-gamma-otp-read-b3-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-panel-level2-key-disable-command-state = "dsi_lp_mode";
 				qcom,panel-roi-alignment=<540 60 540 60 540 60>;
+				qcom,compression-mode = "dsc";
+				qcom,lm-split = <540 540>;
+				qcom,mdss-dsc-encoders = <2>;
+				qcom,mdss-dsc-slice-height = <60>;
+				qcom,mdss-dsc-slice-width = <540>;
+				qcom,mdss-dsc-slice-per-pkt = <2>;
+				qcom,mdss-dsc-bit-per-component = <8>;
+				qcom,mdss-dsc-bit-per-pixel = <8>;
+				qcom,mdss-dsc-block-prediction-enable;
 				};
 
 			timing@3{
@@ -2037,6 +2067,7 @@
 				qcom,mdss-dsi-t-clk-post = <0x1A>;
 				qcom,mdss-dsi-on-command = [
 				/* DSC Setting */
+				07 01 00 00 00 00 01 01					/* DSC enable */
 				15 01 00 00 00 00 02 C3 00				/* Scaler disable */
 				39 01 00 00 00 00 5A 0A					/* PPS Setting (1440 x 3120) (initial value) */
 				10 00 00 89 30 80 0C 30
@@ -2569,6 +2600,15 @@
 				qcom,mdss-dsi-panel-gamma-otp-read-b3-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-panel-level2-key-disable-command-state = "dsi_lp_mode";
 				qcom,panel-roi-alignment=<720 65 720 65 720 65>;
+				qcom,compression-mode = "dsc";
+				qcom,lm-split = <720 720>;
+				qcom,mdss-dsc-encoders = <2>;
+				qcom,mdss-dsc-slice-height = <65>;
+				qcom,mdss-dsc-slice-width = <720>;
+				qcom,mdss-dsc-slice-per-pkt = <2>;
+				qcom,mdss-dsc-bit-per-component = <8>;
+				qcom,mdss-dsc-bit-per-pixel = <8>;
+				qcom,mdss-dsc-block-prediction-enable;
 				};
 
 		};
