--- a/arch/arm64/configs/gulch_sdcardfs_defconfig
+++ b/arch/arm64/configs/gulch_sdcardfs_defconfig
@@ -5399,6 +5399,7 @@ CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_PAGE_OWNER is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
+CONFIG_OPTIMIZE_INLINING=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
@@ -5533,6 +5534,7 @@ CONFIG_TRACING_SUPPORT=y
 # CONFIG_TEST_STACKINIT is not set
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
+# CONFIG_CC_WERROR is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
