gulch_defconfig: regen

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.228 Kernel Configuration
+# Linux/arm64 4.14.230 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -213,7 +213,6 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
@@ -245,7 +244,6 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
-# CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
 CONFIG_UPROBES=y
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
@@ -280,20 +278,25 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
-# CONFIG_LTO is not set
+# CONFIG_LD_GOLD is not set
+CONFIG_LD_LLD=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
-CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLANG is not set
+CONFIG_THINLTO=y
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_ROP_PROTECTION_NONE=y
 # CONFIG_SHADOW_CALL_STACK is not set
+CONFIG_LLVM_POLLY=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
-CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
@@ -313,10 +316,10 @@ CONFIG_VMAP_STACK=y
 CONFIG_ARCH_HAS_STRICT_KERNEL_RWX=y
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
-CONFIG_STRICT_MODULE_RWX=y
 CONFIG_REFCOUNT_FULL=y
 # CONFIG_PANIC_ON_REFCOUNT_ERROR is not set
 CONFIG_ARCH_HAS_RELR=y
+CONFIG_RELR=y
 
 #
 # GCOV-based kernel profiling
@@ -327,23 +330,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-# CONFIG_MODULE_FORCE_UNLOAD is not set
-CONFIG_MODVERSIONS=y
-# CONFIG_MODULE_SRCVERSION_ALL is not set
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-CONFIG_MODULE_SIG_SHA512=y
-CONFIG_MODULE_SIG_HASH="sha512"
-# CONFIG_MODULE_COMPRESS is not set
-# CONFIG_TRIM_UNUSED_KSYMS is not set
+# CONFIG_MODULES is not set
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_BLK_SCSI_REQUEST=y
@@ -608,8 +595,6 @@ CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 # CONFIG_PROCESS_RECLAIM is not set
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
-CONFIG_DIRECT_SWAPPINESS=y
-CONFIG_ONEPLUS_MEM_MONITOR=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SECCOMP=y
@@ -644,20 +629,21 @@ CONFIG_ARM64_PAN=y
 #
 CONFIG_ARM64_UAO=y
 # CONFIG_ARM64_PMEM is not set
-CONFIG_ARM64_MODULE_CMODEL_LARGE=y
-CONFIG_ARM64_MODULE_PLTS=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
 #
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
-# CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
-CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_IMG_GZ_DTB=y
+# CONFIG_IMG_DTB is not set
+CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
+CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
+# CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
 CONFIG_KRYO_PMU_WORKAROUND=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
@@ -848,9 +834,7 @@ CONFIG_NETWORK_SECMARK=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
-CONFIG_BRIDGE_NETFILTER=m
-CONFIG_SLA=y
-CONFIG_SLA_ALGO=y
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -1216,7 +1200,6 @@ CONFIG_XPS=y
 CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-CONFIG_BPF_JIT=y
 # CONFIG_BPF_STREAM_PARSER is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
@@ -1329,7 +1312,6 @@ CONFIG_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_DEBUG_TEST_DRIVER_REMOVE is not set
-# CONFIG_TEST_ASYNC_DRIVER_PROBE is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
 CONFIG_GENERIC_CPU_AUTOPROBE=y
@@ -1405,9 +1387,6 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 # CONFIG_ZRAM is not set
-# CONFIG_ZRAM_DEDUP is not set
-# CONFIG_ZRAM_WRITEBACK is not set
-# CONFIG_ZRAM_MEMORY_TRACKING is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
@@ -2000,7 +1979,7 @@ CONFIG_WLAN_VENDOR_ATH=y
 # CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 CONFIG_WIL6210_PLATFORM_MSM=y
@@ -2367,7 +2346,7 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_DIAGFWD_BRIDGE_CODE=y
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 CONFIG_OKL4_PIPE=y
 CONFIG_VSERVICES_SERIAL=y
 CONFIG_VSERVICES_SERIAL_SERVER=y
@@ -2454,7 +2433,6 @@ CONFIG_I2C_QCOM_GENI=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_MSM_V2 is not set
-# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_SLAVE is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
@@ -2490,7 +2468,6 @@ CONFIG_SPI_QCOM_GENI=y
 # SPI Protocol Masters
 #
 CONFIG_SPI_SPIDEV=y
-# CONFIG_SPI_LOOPBACK_TEST is not set
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPI_SLAVE is not set
 # CONFIG_SPI_DYNAMIC is not set
@@ -3036,7 +3013,7 @@ CONFIG_IR_SHARP_DECODER=y
 CONFIG_IR_MCE_KBD_DECODER=y
 CONFIG_IR_XMP_DECODER=y
 # CONFIG_RC_DEVICES is not set
-CONFIG_IR_MSM_GENI=m
+CONFIG_IR_MSM_GENI=y
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -3077,7 +3054,7 @@ CONFIG_MEDIA_USB_SUPPORT=y
 #
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-CONFIG_USB_GSPCA=m
+CONFIG_USB_GSPCA=y
 # CONFIG_USB_M5602 is not set
 # CONFIG_USB_STV06XX is not set
 # CONFIG_USB_GL860 is not set
@@ -3177,15 +3154,15 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 CONFIG_MSM_NPU=y
-CONFIG_DVB_MPQ=m
+CONFIG_DVB_MPQ=y
 
 #
 # Qualcomm Technologies, Inc. Demux device config
 #
-CONFIG_DVB_MPQ_DEMUX=m
+CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_NUM_DMX_DEVICES=4
 CONFIG_DVB_MPQ_TSPP1=y
-CONFIG_TSPP=m
+CONFIG_TSPP=y
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_TEST_DRIVERS is not set
 # CONFIG_DVB_PLATFORM_DRIVERS is not set
@@ -3216,7 +3193,6 @@ CONFIG_TSPP=m
 # Media ancillary drivers (tuners, sensors, i2c, spi, frontends)
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
-CONFIG_MEDIA_ATTACH=y
 CONFIG_VIDEO_IR_I2C=y
 
 #
@@ -3491,7 +3467,7 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=m
+CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
 # CONFIG_LCD_LMS283GF05 is not set
 # CONFIG_LCD_LTV350QV is not set
@@ -4079,7 +4055,7 @@ CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
+CONFIG_MMC_TEST=y
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 CONFIG_MMC_PARANOID_SD_INIT=y
@@ -4397,11 +4373,7 @@ CONFIG_STAGING=y
 # CONFIG_IRDA is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_COMEDI is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
-# CONFIG_RTL8723BS is not set
 # CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
 # CONFIG_RTS5208 is not set
 
 #
@@ -4500,8 +4472,6 @@ CONFIG_ION=y
 # CONFIG_ION_FORCE_DMA_SYNC is not set
 # CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE is not set
 # CONFIG_STAGING_BOARD is not set
-# CONFIG_LTE_GDM724X is not set
-# CONFIG_LNET is not set
 # CONFIG_DGNC is not set
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
@@ -4552,7 +4522,7 @@ CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
 CONFIG_IPA3_MHI_PRIME_MANAGER=y
 CONFIG_IPA_UT=y
-CONFIG_MSM_11AD=m
+CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
 CONFIG_IPA3_REGDUMP=y
 # CONFIG_QCOM_ETHERNET_UTIL is not set
@@ -4766,7 +4736,7 @@ CONFIG_QCOM_SM8150_LLCC=y
 # CONFIG_QCOM_ATOLL_LLCC is not set
 # CONFIG_QCOM_SDXPRAIRIE_LLCC is not set
 # CONFIG_QCOM_LLCC_AMON is not set
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QCOM_QMI_HELPERS=y
 CONFIG_QCOM_QMI_RMNET=y
 CONFIG_QCOM_QMI_DFC=y
@@ -5344,8 +5314,6 @@ CONFIG_ESOC_MDM_DRV=y
 CONFIG_ESOC_MDM_DBG_ENG=y
 # CONFIG_MDM_DBG_REQ_ENG is not set
 CONFIG_OEM_BOOT_MODE=y
-CONFIG_ADJ_CHAIN=y
-# CONFIG_OP_FREEZER is not set
 # CONFIG_PARAM_READ_WRITE is not set
 CONFIG_STEP_MOTOR=y
 CONFIG_DIGITAL_HALL_M1120=y
@@ -5353,13 +5321,11 @@ CONFIG_TRI_STATE_KEY=y
 CONFIG_HALL_TRI_STATE_KEY=y
 CONFIG_SENSOR_HALL_MXM1120=y
 CONFIG_SENSOR_HALL_IST8801=y
-CONFIG_OEM_FORCE_DUMP=y
 CONFIG_AW8697_HAPTIC=y
 
 #
 # LED Triggers
 #
-CONFIG_VM_FRAGMENT_MONITOR=y
 
 #
 # Firmware Drivers
@@ -5467,13 +5433,6 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 # CONFIG_NTFS_RW is not set
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_DISCARD=y
-# CONFIG_EXFAT_DELAYED_SYNC is not set
-# CONFIG_EXFAT_KERNEL_DEBUG is not set
-# CONFIG_EXFAT_DEBUG_MSG is not set
-CONFIG_EXFAT_DEFAULT_CODEPAGE=437
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 
 #
 # Pseudo filesystems
@@ -5499,6 +5458,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_AFFS_FS is not set
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
+# CONFIG_SDCARD_FS is not set
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -5519,7 +5479,6 @@ CONFIG_PSTORE_ZLIB_COMPRESS=y
 # CONFIG_PSTORE_LZ4_COMPRESS is not set
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
-CONFIG_PSTORE_DEVICE_INFO=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
@@ -5584,6 +5543,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_UTF8 is not set
 # CONFIG_DLM is not set
 CONFIG_UNICODE=y
+# CONFIG_UNICODE_NORMALIZATION_SELFTEST is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
 # CONFIG_VIRTUALIZATION is not set
 
@@ -5772,7 +5732,6 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
 # CONFIG_INTERVAL_TREE_TEST is not set
-# CONFIG_PERCPU_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
 # CONFIG_TEST_STRING_HELPERS is not set
@@ -5782,19 +5741,15 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_TEST_UUID is not set
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_TEST_HASH is not set
-# CONFIG_TEST_LKM is not set
-# CONFIG_TEST_USER_COPY is not set
-# CONFIG_TEST_BPF is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_MEMTEST is not set
-# CONFIG_TEST_STATIC_KEYS is not set
-# CONFIG_TEST_KMOD is not set
 # CONFIG_TEST_MEMINIT is not set
 # CONFIG_TEST_STACKINIT is not set
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
+# CONFIG_CC_WERROR is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
@@ -5807,8 +5762,8 @@ CONFIG_ARM64_PTDUMP_CORE=y
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
 # CONFIG_DEBUG_WX is not set
+CONFIG_DEBUG_RODATA=y
 CONFIG_DEBUG_ALIGN_RODATA=y
-# CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINKS_AND_SINKS=y
@@ -5931,7 +5886,6 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_SIMD=y
 
 #
@@ -6054,7 +6008,6 @@ CONFIG_PKCS7_MESSAGE_PARSER=y
 #
 # Certificates for signature checking
 #
-CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_SYSTEM_TRUSTED_KEYS=""
 # CONFIG_SYSTEM_EXTRA_CERTIFICATE is not set
@@ -6149,14 +6102,3 @@ CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_SBITMAP=y
 # CONFIG_STRING_SELFTEST is not set
-# CONFIG_OPCHAIN is not set
-# CONFIG_MEMPLUS is not set
-# CONFIG_SMART_BOOST is not set
-# CONFIG_DEFRAG is not set
-CONFIG_FSC=y
-# CONFIG_HOUSTON is not set
-# CONFIG_CONTROL_CENTER is not set
-# CONFIG_AIGOV is not set
-CONFIG_IM=y
-CONFIG_PCCORE=y
-# CONFIG_UXCHAIN is not set
