gulch_defconfig: regen

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -102,7 +102,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -148,6 +148,7 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
@@ -160,15 +161,16 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
-CONFIG_SCHED_CORE_CTL=y
+# CONFIG_SCHED_CORE_CTL is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
-CONFIG_SCHED_AUTOGROUP=y
+# CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
+CONFIG_STUNE_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
@@ -790,6 +792,8 @@ CONFIG_CPU_FREQ_MIN_PERFP=0
 CONFIG_CPU_FREQ_IDLE_LP=0
 CONFIG_CPU_FREQ_IDLE_PERF=0
 CONFIG_CPU_FREQ_IDLE_PERFP=0
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT=10000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
 
 #
 # CPU frequency scaling drivers
