gulch_defconfig: regen

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -138,10 +138,14 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 #
 # FAIR Scheuler tunables
 #
-CONFIG_PELT_UTIL_HALFLIFE_32=y
+# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_24 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_12 is not set
+CONFIG_PELT_UTIL_HALFLIFE_10=y
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
+CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
 # CONFIG_MEMCG is not set
 CONFIG_BLK_CGROUP=y
@@ -1528,6 +1532,7 @@ CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_TEST_IRQ_REQUESTER is not set
 CONFIG_BOOTLOADER_LOG=y
 CONFIG_AUDIO_SENSOR=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
@@ -5368,6 +5373,7 @@ CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_PAGE_OWNER is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
+CONFIG_OPTIMIZE_INLINING=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
@@ -5797,6 +5803,7 @@ CONFIG_GENERIC_NET_UTILS=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
+CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
