--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -290,8 +290,9 @@ CONFIG_THINLTO=y
 CONFIG_LTO_CLANG=y
 # CONFIG_CFI_CLANG is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
-CONFIG_ROP_PROTECTION_NONE=y
-# CONFIG_SHADOW_CALL_STACK is not set
+# CONFIG_ROP_PROTECTION_NONE is not set
+CONFIG_SHADOW_CALL_STACK=y
+CONFIG_SHADOW_CALL_STACK_VMAP=y
 CONFIG_LLVM_POLLY=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
@@ -730,6 +731,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
+# CONFIG_PM_SLEEP_MONITOR is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
@@ -5476,7 +5478,6 @@ CONFIG_RCU_PANIC_ON_STALL=0
 # CONFIG_FAULT_INJECTION is not set
 # CONFIG_LATENCYTOP is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
-CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
