--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -75,10 +75,8 @@ CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_MSI_IRQ=y
 CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
-# CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
-# CONFIG_GENERIC_IRQ_DEBUGFS is not set
 CONFIG_ARCH_CLOCKSOURCE_DATA=y
 CONFIG_GENERIC_TIME_VSYSCALL=y
 CONFIG_GENERIC_CLOCKEVENTS=y
@@ -325,7 +323,6 @@ CONFIG_RELR=y
 #
 # GCOV-based kernel profiling
 #
-# CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
@@ -341,7 +338,6 @@ CONFIG_BLK_DEV_BSG=y
 # CONFIG_BLK_DEV_THROTTLING is not set
 # CONFIG_BLK_CMDLINE_PARSER is not set
 # CONFIG_BLK_WBT is not set
-CONFIG_BLK_DEBUG_FS=y
 # CONFIG_BLK_SED_OPAL is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
@@ -635,7 +631,6 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
-# CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
@@ -1169,7 +1164,6 @@ CONFIG_INET_SCTP_DIAG=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 CONFIG_L2TP=y
-# CONFIG_L2TP_DEBUGFS is not set
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
@@ -1313,7 +1307,6 @@ CONFIG_BT_HS=y
 CONFIG_BT_LE=y
 # CONFIG_BT_LEDS is not set
 # CONFIG_BT_SELFTEST is not set
-CONFIG_BT_DEBUGFS=y
 
 #
 # Bluetooth device drivers
@@ -1344,7 +1337,6 @@ CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_REG_CELLULAR_HINTS=y
 # CONFIG_CFG80211_REG_RELAX_NO_IR is not set
 CONFIG_CFG80211_DEFAULT_PS=y
-# CONFIG_CFG80211_DEBUGFS is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CFG80211_CRDA_SUPPORT=y
 # CONFIG_CFG80211_WEXT is not set
@@ -1413,7 +1405,6 @@ CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_SPMI=y
 CONFIG_REGMAP_MMIO=y
 # CONFIG_REGMAP_WCD_IRQ is not set
-# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_DMA_FENCE_TRACE is not set
 CONFIG_DMA_CMA=y
@@ -1531,7 +1522,6 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_QPNP_MISC is not set
-# CONFIG_TEST_IRQ_REQUESTER is not set
 CONFIG_BOOTLOADER_LOG=y
 CONFIG_AUDIO_SENSOR=y
 CONFIG_FORCE_FAST_CHARGE=y
@@ -1863,7 +1853,6 @@ CONFIG_NET_VENDOR_MARVELL=y
 # CONFIG_MVMDIO is not set
 # CONFIG_SKGE is not set
 CONFIG_SKY2=y
-# CONFIG_SKY2_DEBUG is not set
 CONFIG_NET_VENDOR_MELLANOX=y
 # CONFIG_MLX4_EN is not set
 # CONFIG_MLX4_CORE is not set
@@ -3825,7 +3814,6 @@ CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
-# CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=900
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 
@@ -4144,7 +4132,6 @@ CONFIG_QCOM_GPI_DMA=y
 # DMABUF options
 #
 CONFIG_SYNC_FILE=y
-# CONFIG_SW_SYNC is not set
 # CONFIG_AUXDISPLAY is not set
 CONFIG_UIO=y
 # CONFIG_UIO_CIF is not set
@@ -4309,6 +4296,7 @@ CONFIG_USB_BAM=y
 # CONFIG_VETH_IPA is not set
 CONFIG_GSI=y
 # CONFIG_GSI_REGISTER_VERSION_2 is not set
+# CONFIG_GSI_DEBUGFS is not set
 CONFIG_IPA3=y
 # CONFIG_IPA is not set
 # CONFIG_IPA_DEBUG is not set
@@ -4319,7 +4307,6 @@ CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
 CONFIG_IPA3_MHI_PRIME_MANAGER=y
-# CONFIG_IPA_UT is not set
 CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
 CONFIG_IPA3_REGDUMP=y
@@ -4574,7 +4561,6 @@ CONFIG_QCOM_DCC_V2=y
 # CONFIG_SDX_EXT_IPC is not set
 # CONFIG_QTI_NOTIFY_SIDEBAND is not set
 CONFIG_QCOM_SECURE_BUFFER=y
-# CONFIG_MSM_REMOTEQDSS is not set
 CONFIG_ICNSS=y
 # CONFIG_ICNSS_DEBUG is not set
 CONFIG_ICNSS_QMI=y
@@ -4595,7 +4581,6 @@ CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
 # CONFIG_MSM_JTAGV8 is not set
 CONFIG_QCOM_QDSS_BRIDGE=y
-# CONFIG_QTI_RPM_STATS_LOG is not set
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_MSM_EVENT_TIMER=y
@@ -4616,7 +4601,6 @@ CONFIG_RMNET_CTL=y
 # CONFIG_RMNET_CTL_DEBUG is not set
 # CONFIG_QCOM_HGSL_TCSR_SIGNAL is not set
 CONFIG_MSM_PERFORMANCE=y
-# CONFIG_QMP_DEBUGFS_CLIENT is not set
 CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
@@ -5144,7 +5128,7 @@ CONFIG_HAVE_ARM_SMCCC=y
 #
 # Tegra firmware driver
 #
-# CONFIG_MSM_TZ_LOG is not set
+CONFIG_MSM_TZ_LOG=y
 # CONFIG_ACPI is not set
 
 #
@@ -5375,7 +5359,7 @@ CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 # CONFIG_PAGE_OWNER is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 CONFIG_OPTIMIZE_INLINING=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
@@ -5491,7 +5475,6 @@ CONFIG_TRACING_SUPPORT=y
 #
 # Runtime Testing
 #
-# CONFIG_LKDTM is not set
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_TEST_SORT is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
@@ -5540,7 +5523,6 @@ CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
 CONFIG_CORESIGHT_DYNAMIC_REPLICATOR=y
 # CONFIG_CORESIGHT_DBGUI is not set
 CONFIG_CORESIGHT_STM=y
-# CONFIG_CORESIGHT_CPU_DEBUG is not set
 CONFIG_CORESIGHT_CTI=y
 CONFIG_CORESIGHT_OST=y
 CONFIG_CORESIGHT_TPDA=y
