--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.230 Kernel Configuration
+# Linux/arm64 4.14.231 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -589,6 +589,7 @@ CONFIG_HOLES_IN_ZONE=y
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
+# CONFIG_HZ_80 is not set
 CONFIG_HZ_100=y
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
@@ -5083,6 +5084,8 @@ CONFIG_STM=y
 # CONFIG_STM_SOURCE_CONSOLE is not set
 # CONFIG_STM_SOURCE_HEARTBEAT is not set
 # CONFIG_INTEL_TH is not set
+CONFIG_CORESIGHT_PLACEHOLDER=y
+CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
 # CONFIG_FPGA is not set
 
 #
@@ -5514,29 +5517,7 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 CONFIG_DEBUG_RODATA=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_LINKS_AND_SINKS=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-# CONFIG_CORESIGHT_CATU is not set
-# CONFIG_CORESIGHT_SINK_TPIU is not set
-# CONFIG_CORESIGHT_SINK_ETBV10 is not set
-# CONFIG_CORESIGHT_SOURCE_ETM4X is not set
-CONFIG_CORESIGHT_DYNAMIC_REPLICATOR=y
-# CONFIG_CORESIGHT_DBGUI is not set
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_OST=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-# CONFIG_CORESIGHT_TPDM_DEFAULT_ENABLE is not set
-# CONFIG_CORESIGHT_QPDI is not set
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_REMOTE_ETM_DEFAULT_ENABLE=0
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_TGU=y
-CONFIG_CORESIGHT_EVENT=y
+# CONFIG_CORESIGHT is not set
 
 #
 # Security options
