--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -5501,7 +5501,7 @@ CONFIG_TRACING_SUPPORT=y
 # CONFIG_TEST_STACKINIT is not set
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
-# CONFIG_CC_WERROR is not set
+CONFIG_CC_WERROR=y
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
