--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -2882,6 +2882,7 @@ CONFIG_QTI_BCL_PMIC5=y
 CONFIG_QTI_BCL_SOC_DRIVER=y
 CONFIG_QTI_ADC_TM=y
 # CONFIG_QTI_CX_IPEAK_COOLING_DEVICE is not set
+CONFIG_MSM_THERMAL_SIMPLE=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
