kernel: Restore schedtune compatibility
When SCHED_TUNE is disabled, certain elements in userspace, like
libperfmgr, may throw errors when it doesn't detect SCHEDTUNE-related nodes.
So, create a few dummy nodes to satisfy said userspace elements.

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1281,6 +1281,13 @@ config STUNE_ASSIST
 
 	  If unsure, say N.
 
+config SCHED_TUNE_DUMMY
+	bool "Create dummy SCHEDTUNE nodes"
+	depends on SMP
+	depends on !SCHED_TUNE && !CGROUP_SCHEDTUNE
+	help
+	  Create dummy SCHEDTUNE nodes.
+
 config DEFAULT_USE_ENERGY_AWARE
 	bool "Default to enabling the Energy Aware Scheduler feature"
 	default n
