gulch_defconfig: disable profiling

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -249,7 +249,7 @@ CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_HARDENED is not set
 # CONFIG_SLUB_CPU_PARTIAL is not set
 CONFIG_SYSTEM_DATA_VERIFICATION=y
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
 # CONFIG_UPROBES is not set
@@ -1529,8 +1529,6 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
 # CONFIG_PROFILER is not set
 # CONFIG_PCI_ENDPOINT_TEST is not set
-CONFIG_UID_SYS_STATS=y
-# CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_QPNP_MISC is not set
 CONFIG_BOOTLOADER_LOG=y
