gulch_defconfig: partially revert ce3ae7107

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -136,9 +136,9 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # FAIR Scheuler tunables
 #
 # CONFIG_PELT_UTIL_HALFLIFE_32 is not set
-# CONFIG_PELT_UTIL_HALFLIFE_24 is not set
+CONFIG_PELT_UTIL_HALFLIFE_24=y
 # CONFIG_PELT_UTIL_HALFLIFE_16 is not set
-CONFIG_PELT_UTIL_HALFLIFE_12=y
+# CONFIG_PELT_UTIL_HALFLIFE_12 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_10 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 
@@ -176,7 +176,7 @@ CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
-CONFIG_SCHED_AUTOGROUP=y
+# CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
 CONFIG_STUNE_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
