gulch_defconfig: disable zram, swap, etc

--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -50,7 +50,7 @@ CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-GulchR"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -650,9 +650,8 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 CONFIG_CMA_AREAS=7
-CONFIG_ZPOOL=y
+# CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
-CONFIG_Z3FOLD=y
 # CONFIG_ZSMALLOC is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -1488,10 +1487,7 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_WRITEBACK is not set
-CONFIG_DEFAULT_ZRAM_Z3FOLD=y
-CONFIG_ZRAM_DEFAULT_BACKEND="z3fold"
+# CONFIG_ZRAM is not set
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -5715,7 +5711,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 # Compression
 #
 CONFIG_CRYPTO_DEFLATE=y
-CONFIG_CRYPTO_LZO=y
+# CONFIG_CRYPTO_LZO is not set
 # CONFIG_CRYPTO_842 is not set
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_LZ4HC=y
@@ -5827,8 +5823,6 @@ CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
-CONFIG_LZO_COMPRESS=y
-CONFIG_LZO_DECOMPRESS=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4HC_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
