arm64: dts: sm8150-v2: thermal: update

--- a/arch/arm64/boot/dts/qcom/sm8150-v2.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-v2.dtsi
@@ -1375,7 +1375,7 @@
 		zone@7 {
 			reg = <7>;
 			qcom,silver-khz = <1708800>;
-			qcom,gold-khz = <1401600>;
+			qcom,gold-khz = <940800>;
 			qcom,prime-khz = <1804800>;
 			qcom,trip-deg = <76000>;
 		};
@@ -1383,7 +1383,7 @@
 		zone@8 {
 			reg = <8>;
 			qcom,silver-khz = <1708800>;
-			qcom,gold-khz = <1401600>;
+			qcom,gold-khz = <940800>;
 			qcom,prime-khz = <1804800>;
 			qcom,trip-deg = <78000>;
 		};
@@ -1391,7 +1391,7 @@
 		zone@9 {
 			reg = <9>;
 			qcom,silver-khz = <1708800>;
-			qcom,gold-khz = <1171200>;
+			qcom,gold-khz = <940800>;
 			qcom,prime-khz = <1804800>;
 			qcom,trip-deg = <80000>;
 		};
@@ -1399,7 +1399,7 @@
 		zone@10 {
 			reg = <10>;
 			qcom,silver-khz = <1708800>;
-			qcom,gold-khz = <1171200>;
+			qcom,gold-khz = <940800>;
 			qcom,prime-khz = <1804800>;
 			qcom,trip-deg = <82000>;
 		};
@@ -1407,7 +1407,7 @@
 		zone@11 {
 			reg = <11>;
 			qcom,silver-khz = <1708800>;
-			qcom,gold-khz = <1171200>;
+			qcom,gold-khz = <940800>;
 			qcom,prime-khz = <1804800>;
 			qcom,trip-deg = <85000>;
 		};
@@ -1415,7 +1415,7 @@
 		zone@12 {
 			reg = <12>;
 			qcom,silver-khz = <1708800>;
-			qcom,gold-khz = <1171200>;
+			qcom,gold-khz = <940800>;
 			qcom,prime-khz = <1804800>;
 			qcom,trip-deg = <90000>;
 		};
